--- a/day five/index.html
+++ b/day five/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sen&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
 
+    <link rel="shortcut icon" href="assets/favicon.ico">
     <title>30 Days of Code - Day 5</title>
   </head>
 
